# ava-skills

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: openwiki-update.yml
docs/: SKILL_SPEC.md
skills/: __init__.py  loader.py
skills/code-bench/: SKILL.md  skill.py
skills/eval-harness-runner/: SKILL.md  skill.py
skills/family-brain-wiki/: SKILL.md  skill.py
skills/jspace-inspector/: SKILL.md  skill.py
skills/logic-prover/: SKILL.md  skill.py
skills/memory-mint/: SKILL.md  skill.py
skills/memory-mint/tests/: test_memory_mint.py
skills/memory-router/: SKILL.md  skill.py
skills/openwiki-sync/: SKILL.md  skill.py
skills/safety-scanner/: SKILL.md  skill.py
tests/: conftest.py  test_code_bench.py  test_eval_harness_runner.py  test_loader.py  test_logic_prover.py  test_memory_router.py  test_safety_scanner.py
